2006-09-24  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclParse.c (Tcl_ParseCommand): also return an error if 
	start==NULL and numBytes<0. This is coverity's bug #20

	* generic/tclStringObj.c (STRING_SIZE): fix allocation for
	0-length strings. This is coverity's bugs #54-5
	
2006-09-22  Andreas Kupries  <andreask@activestate.com>

	* generic/tclInt.h: Moved TIP#268's field 'packagePrefer' to the
	  end of the structure, for better backward compatibility.

2006-09-22  Andreas Kupries <andreask@activestate.com>

	* generic/tclPkg.c (Tcl_PkgRequireEx): Changes handling of the
	  return information from 'Tcl_PkgRequireProc'. Keep the
	  interpreter result empty. Backport of fix for problem found
	  while testing #268 under 8.5. More details in the comments.

2006-09-22  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclThreadTest.c (TclCreateThread): Use NULL instead of 0 as
	end-of-strings marker to Tcl_AppendResult; the difference matters on
	64-bit machines. [Bug 1562528]

2006-09-21  Andreas Kupries <andreask@activestate.com>

	* generic/tcl.decls:  Implemented TIP #268, conditionally.
	* generic/tclBasic.c: Define TCL_TIP268 to activate the new
	* generic/tclDecls.h: features.
	* generic/tclInt.h:
	* generic/tclPkg.c: 
	* generic/tclStubInit.c:
	* generic/tclTest.c:
	* library/init.tcl
	* library/package.tcl:
	* tests/pkg.test:
	* tests/platform.test:
	* tests/safe.test:
	* doc/PkgRequire.3:

2006-09-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/http/http.tcl:      Change " " -> "+" url encoding mapping
	* library/http/pkgIndex.tcl:  to " " -> "%20" as per RFC 3986.
	* tests/http.test (http-5.1): bump http to 2.5.3 for 8.4.14

2006-09-12  Andreas Kupries  <andreask@activestate.com>

	* unix/configure.in (HAVE_MTSAFE_GETHOST*): Modified to recognize
	  HP-UX 11.00 and beyond as having mt-safe implementations of the
	  gethost functions.
	* unix/configure: Regenerated, using autoconf 2.13
